--- a/style.scss
+++ b/style.scss
@@ -44,6 +44,11 @@ html.active {
     }
   }
 }
+@media screen and(min-width: 768px) {
+  .overlay {
+    opacity: 0;
+  }
+}
 @media screen and(max-width: 767px) {
   header {
     overflow-x : hidden;
