--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,230 @@
 
+html.active {
+  height: 100%;
+  overflow: hidden;
+}
+
+.headerInner {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 1000px;
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+.headerInner .logo {
+  padding: 20px 0;
+}
+
+.headerInner .mainNav > ul {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.headerInner .mainNav > ul > li > a {
+  display: block;
+  padding: 20px 30px;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.headerInner .mainNav > ul > li > a.navTrigger {
+  padding: 20px 40px 20px 20px;
+}
+
+.headerInner .mainNav > ul > li > a:hover {
+  background-color: #eee;
+}
+
+.headerInner .mainNav > ul > li .subNav {
+  display: none;
+}
+
+.headerInner .mainNav > ul > li .subNav li a {
+  display: block;
+  padding: 10px;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.headerInner .mainNav > ul > li .subNav li a:hover {
+  background-color: #eee;
+}
+
+@media screen and (max-width: 767px) {
+  header {
+    overflow-x: hidden;
+    background-color: #fff;
+    border-bottom: 1px solid #000;
+  }
+  .headerInner {
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .headerInner .spTrigger {
+    position: relative;
+    z-index: 1;
+    width: 20px;
+    height: 16px;
+    padding-right: 20px;
+    cursor: pointer;
+  }
+  .headerInner .spTrigger span {
+    display: block;
+    background-color: #000;
+    width: 100%;
+    height: 2px;
+    border-radius: 2px;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+  }
+  .headerInner .spTrigger span + span {
+    margin-top: 5px;
+  }
+  .headerInner .spTrigger.open span:nth-child(1) {
+    -webkit-transform: translateY(7px) rotate(-45deg);
+            transform: translateY(7px) rotate(-45deg);
+  }
+  .headerInner .spTrigger.open span:nth-child(2) {
+    opacity: 0;
+  }
+  .headerInner .spTrigger.open span:nth-child(3) {
+    -webkit-transform: translateY(-7px) rotate(45deg);
+            transform: translateY(-7px) rotate(45deg);
+  }
+  .headerInner .mainNav {
+    display: block;
+    position: fixed;
+    top: 65px;
+    right: 0;
+    width: 80%;
+    height: 100%;
+    background-color: #fff;
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%);
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
+    overflow: auto;
+  }
+  .headerInner .mainNav > ul {
+    display: block;
+    padding: 50px 0 100px;
+    height: auto;
+  }
+  .headerInner .mainNav > ul > li {
+    border-top: 1px solid #eee;
+  }
+  .headerInner .mainNav > ul > li:last-child {
+    border-bottom: 1px solid #eee;
+  }
+  .headerInner .mainNav > ul > li a {
+    position: relative;
+    display: block;
+    padding: 10px 15% 10px 5%;
+  }
+  .headerInner .mainNav > ul > li a.navTrigger {
+    padding: 10px 15% 10px 5%;
+  }
+  .headerInner .mainNav > ul > li a:hover {
+    background-color: #fff;
+  }
+  .headerInner .mainNav > ul > li a .icon {
+    position: absolute;
+    right: 20px;
+  }
+  .headerInner .mainNav > ul > li .subNav li a {
+    padding: 10px 5%;
+  }
+  .headerInner .mainNav.active {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  .headerInner .mainNav .subNav {
+    display: none;
+  }
+  .overlay {
+    opacity: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
+  }
+  .overlay.active {
+    opacity: 0.5;
+  }
+}
+
+.icon {
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  right: -20px;
+  width: 15px;
+  height: 15px;
+}
+
+.icon::after {
+  position: absolute;
+  top: 0;
+  -webkit-transform: rotate(135deg);
+          transform: rotate(135deg);
+  right: 0;
+  content: "";
+  display: block;
+  width: 8px;
+  height: 8px;
+  border-top: 2px solid #000;
+  border-right: 2px solid #000;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.open .icon::after {
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  top: 40%;
+}
+
+body {
+  margin: 0;
+}
+
+a {
+  color: #000;
+  text-decoration: none;
+}
+
+.contents {
+  height: 1000px;
+}
+
+ul {
+  padding-left: 0;
+  margin: 0;
+}
+
+li {
+  list-style: none;
+}
+/*# sourceMappingURL=style.css.map */
+@media screen and(min-width: 768px) {
+  .overlay {
+    opacity: 0;
+  }
+}
